Add my own images and project links

--- a/static/index.html
+++ b/static/index.html
@@ -29,51 +29,33 @@
 		<!-- img tags are images. Lorem Pixel will deliver random images; handy! -->
 		<!-- a are anchors, also known as hyperlinks. Use the href attribute to tell the browser where to go when the user clicks -->
 		<div id="project1">
-			<a href="project.html">
-				<img src="images/lorempixel.people.1.jpeg" alt="Lorem Pixel image">
-				<p>Waiting in Line</p>
+			<a href="http://afruitfulday.com">
+				<img src="images/cool_pineapple.png" alt="Fruitful">
+				<p>Rewarding To-Do List</p>
 			</a>
 		</div>
 		<div id="project2">
-			<a href="project.html">
-				<img src="images/lorempixel.city.1.jpeg" alt="Lorem Pixel image">
-				<p>Needfinding</p>
+			<a href="https://github.com/tschelbs18/210habit">
+				<img src="images/habit_tracker.jpg" alt="Habits">
+				<p>Open Source Activity Tracker</p>
 			</a>
 		</div>
 		<div id="project3">
-			<a href="project.html">
-				<img src="images/lorempixel.technics.1.jpeg" alt="Lorem Pixel image">
-				<p>Prototyping</p>
+			<a href="https://getprofesh.com">
+				<img src="images/P logo.jpg" alt="Profesh">
+				<p>Small Business Recruiting</p>
 			</a>
 		</div>
 		<div id="project4">
-			<a href="project.html">
-				<img src="images/lorempixel.abstract.1.jpeg" alt="Lorem Pixel image">
-				<p>Heuristic Evaluation</p>
+			<a href="https://github.com/tschelbs18/OLD_sudoku_solver">
+				<img src="images/sudoku.png" alt="Sudoku">
+				<p>Open Source Python Sudoku Solver</p>
 			</a>
 		</div>
 		<div id="project5">
-			<a href="project.html">
-				<img src="images/lorempixel.abstract.8.jpeg" alt="Lorem Pixel image">
-				<p>Visualization</p>
-			</a>
-		</div>
-		<div id="project6">
-			<a href="project.html">
-				<img src="images/lorempixel.people.2.jpeg" alt="Lorem Pixel image">
-				<p>Social design</p>
-			</a>
-		</div>
-		<div id="project7">
-			<a href="project.html">
-				<img src="images/lorempixel.technics.2.jpeg" alt="Lorem Pixel image">
-				<p>Gestural interaction</p>
-			</a>
-		</div>
-		<div id="project8">
-			<a href="project.html">
-				<img src="images/lorempixel.city.2.jpeg" alt="Lorem Pixel image">
-				<p>Design tools</p>
+			<a href="https://www.linkedin.com/in/ted-schelble-8517b185/">
+				<img src="images/linkedin.jpg" alt="LinkedIn">
+				<p>LinkedIn</p>
 			</a>
 		</div>
 	</div>
